--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="styles.css" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>E-week 2022</title>
   </head>
@@ -13,7 +14,7 @@
     <div id="grad"></div>
     <div id="waves"></div>
     <div class="main ml-auto mr-auto">
-      <div id="ship"></div>
+      <div id="ship" class=""></div>
 
       <div class="home mb-96">
         <div class="header mt-6 mb-24 flex">
@@ -26,9 +27,9 @@
         </div>
         <div class="title-card">
           <div id="logo" class="mb-8"></div>
-          <h4 class="title-1 text-5xl mb-4">Get hyped for</h4>
-          <h1 class="title-2 text-8xl mb-6">E-week 2022</h1>
-          <p class="mb-12 text-2xl uppercase tracking-wider">
+          <h4 class="title-1 text-3xl md:text-5xl mb-4">Get hyped for</h4>
+          <h1 class="title-2 text-6xl md:text-8xl mb-6">E-week 2022</h1>
+          <p class=" mb-12 text-2xl uppercase tracking-wider">
             A week full of fun engineering events.
           </p>
           <button
@@ -160,8 +161,7 @@
           </div>
         </div>
 
-        <div class="text-black"
-        >
+        <div class="text-black">
           © 2021 Copyright:
           <a class="text-black" href="https://tailwind-elements.com/"
             >E-week Committee</a
