Add necessary Links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="styles.css" />
-    <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>E-week 2022</title>
   </head>
@@ -28,20 +31,25 @@
         <div class="title-card">
           <div id="logo" class="mb-8"></div>
           <h4 class="title-1 text-3xl md:text-5xl mb-4">Get hyped for</h4>
-          <h1 class="title-2 text-6xl md:text-8xl mb-6">E-week 2022</h1>
-          <p class=" mb-12 text-2xl uppercase tracking-wider">
-            A week full of fun engineering events.
+          <h1 class="title-2 text-6xl md:text-8xl mb-8">E-week 2022</h1>
+          <p class="mb-12 text-3xl md:text-4xl tracking-wider">
+            February 20th - 25th, 2022
           </p>
-          <button
+          <a
+            href="https://forms.gle/q3CengjFFVB9jC6m7 "
+            target="_blank"
             class="button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
-            Sign Up
-          </button>
+            Team Sign Up
+          </a>
         </div>
       </div>
       <div class="about pt-36 mb-48">
         <p class="title-1 text-5xl mb-12">About</p>
-        <p class="text-2xl">
+        <p class="text-2xl mb-12">
+          <strong>Welcome to E-Week 2022!</strong>
+          <br />
+          <br />
           E-Week is a week-long celebration highlighting the contributions to
           society that engineers make. Started in 1951 by the National Society
           of Professional Engineers, this particular week in February is
@@ -51,10 +59,45 @@
           and food. Register an account for a 5 or 10 man team to participate in
           the festivities and competitions. Awards, prizes, and bragging rights
           await!
+          <br />
+          <br />
+          Below is an overview of all events, including a description and any
+          relevant information like point tier, host, and location. All events
+          have two competitions (5-Person and 10-Person) unless stated
+          otherwise. Points & event winners will be updated every night. Rules
+          are linked in the event titles. If you have any general questions,
+          email Bella Ramos at iramos9@illinois.edu.
         </p>
+        <div class="flex flex-wrap">
+          <a
+            href="https://docs.google.com/document/d/1mBC18fEqcg2Dxpcq-m7s__9BBX1IiaIenCjaJ1byXGU/edit?usp=sharing"
+            target="_blank"
+            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+          >
+            Overview/Rules
+          </a>
+          <a
+            href="https://forms.gle/q3CengjFFVB9jC6m7 "
+            target="_blank"
+            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+          >
+            Team Sign Up
+          </a>
+          <a
+            href="https://docs.google.com/document/d/1Kd27Hv8XLGlhTQSlECy9sURsFRJ3g6kkA0Yqy3T_byg/edit?usp=sharing"
+            target="_blank"
+            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+          >
+            Captain's Packet
+          </a>
+        </div>
+      </div>
+      <div class="faq mb-48">
+        <p class="title-1 text-5xl mb-12">Questions?</p>
+        <p class="text-4xl">Email Bella Ramos at iramos9@illinois.edu.</p>
       </div>
       <footer class="text-center mb-6">
-        <div class="container pt-9">
+        <!-- <div class="container pt-9">
           <div class="flex justify-center mb-9">
             <a href="#!" class="mr-9 text-gray-800">
               <svg
@@ -159,10 +202,10 @@
               </svg>
             </a>
           </div>
-        </div>
+        </div> -->
 
         <div class="text-black">
-          © 2021 Copyright:
+          © 2022 Copyright:
           <a class="text-black" href="https://tailwind-elements.com/"
             >E-week Committee</a
           >
