--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="icon" href="./logo.svg">
+    <meta property="og:image" content="./logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>E-week 2022</title>
