--- a/index.html
+++ b/index.html
@@ -35,6 +35,155 @@
           </button>
         </div>
       </div>
+
+      <div class="committee pt-36 mb-48">
+        <p class="title-1 text-5xl mb-12">Meet the Crew:</p>
+        </div>
+      <div class="Team-wrapper">
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-sm">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Bella Ramos - Director.jpg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Bella Ramos </h1>
+              <h3 class="text-sm text-gray-400 "> Director </h3>
+              <p class="text-sm text-gray-400 mt-4"> iramos9@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Charlie Ranquist - Events.jpg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Charlie Ranquist </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Events Chair </h3>
+              <p class="text-sm text-gray-400 mt-4"> csr5@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Sahithi Manne - Events.jpeg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Sahithi Manne </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Events Chair </h3>
+              <p class="text-sm text-gray-400 mt-4"> manne4@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Aarnav Kunde - Events.JPG" alt="product designer" id="circle">
+              <h1 class="text-lg text-gray-700"> Arnav Kunde </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Events Chair </h3>
+              <p class="text-sm text-gray-400 mt-4"> akunde2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/E-week black.png" alt="product designer">
+              <h1 class="text-md text-gray-700"> Praneeth Guduguntla </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Webmaster </h3>
+              <p class="text-sm text-gray-400 mt-4"> ssg6@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Steven I - Webmaster.jpeg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Steven Isaac </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Webmaster </h3>
+              <p class="text-sm text-gray-400 mt-4"> sisaa2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/E-week black.png" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Nila Krishnan </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Webmaster </h3>
+              <p class="text-sm text-gray-400 mt-4"> nilak2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Thomas Cheng - Internal Relations.jpg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Thomas Cheng </h1>
+              <h3 class="text-sm text-gray-400 "> Internal Relations </h3>
+              <p class="text-sm text-gray-400 mt-4"> hkcheng2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/E-week black.png" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Sam Pasquesi </h1>
+              <h3 class="text-sm text-gray-400 "> Marketing </h3>
+              <p class="text-sm text-gray-400 mt-4"> smp6@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Sofia Ramos - Marketing.jpeg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Sofia Ramos </h1>
+              <h3 class="text-sm text-gray-400 "> Marketing </h3>
+              <p class="text-sm text-gray-400 mt-4"> sramo2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Kelly Ma - Society Competition.jpeg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Kelly Ma </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Society Competition </h3>
+              <p class="text-sm text-gray-400 mt-4"> ycma2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Chloe Lin-SoCo.JPG" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Chloe Lin </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Society Competition </h3>
+              <p class="text-sm text-gray-400 mt-4"> juiyuyl2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/Andrew Chen - Cheap Lunch.jpg" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Andrew Chen </h1>
+              <h3 class="text-sm text-gray-400 "> Cheap Lunch Chair </h3>
+              <p class="text-sm text-gray-400 mt-4"> andrew45@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/E-week black.png" alt="product designer">
+              <h1 class="text-lg text-gray-700"> Jenni Nugent </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Order of the Engineer </h3>
+              <p class="text-sm text-gray-400 mt-4"> jnugent2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/E-week black.png" alt="product designer" id ="circle">
+              <h1 class="text-sm text-gray-700"> Franklin Guachichulca </h1>
+              <h3 class="text-sm text-gray-400 "> Co-Order of the Engineer </h3>
+              <p class="text-sm text-gray-400 mt-4"> fguach2@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div> 
+        <div class = "Profile">
+          <div class="bg-white font-semibold text-center rounded-3xl border shadow-lg p-10 max-w-xs">
+            <img class="mb-3 w-32 h-32 rounded-full shadow-lg mx-auto" src="teamimages/E-week black.png" alt="product designer" id="circle">
+              <h1 class="text-lg text-gray-700"> Sara Alabaddi </h1>
+              <h3 class="text-sm text-gray-400 "> Corporate Chair </h3>
+              <p class="text-sm text-gray-400 mt-4"> saraa6@illinois.edu </p>
+              <!-- <button class="bg-indigo-600 px-7 py-2 mt-8 rounded-3xl text-gray-100 font-semibold uppercase tracking-wide">Contact</button> -->
+            </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
