added sched, order of engineer, and sponsors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="styles.css" />
@@ -92,12 +94,137 @@
           >
             Captain's Packet
           </a>
+          <a
+            href="https://docs.google.com/forms/d/e/1FAIpQLSdHpBId_z7k3ykpVYJvPdCwj8kOd4M0NzZhvaZKD4HLD49Avg/viewform?usp=sf_link"
+            target="_blank"
+            class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
+          >
+           Join the Order of the Engineer
+          </a>
         </div>
       </div>
+      <div class = "Sched">
+        <div class="about pt-36 mb-20">
+          <p class="title-1 text-5xl mb-12">Events Schedule</p>
+          </div>
+        <div class="accordion" id="accordionExample">
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Sunday, February 20th
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>10-10:30am</strong> - Mile Run <br><br>
+                <strong>10:30-11:30am</strong> - Obstacle Course <br> <br>
+                <strong>12:00-1:00pm</strong> - Tug of War <br><br>
+                <strong>1:00-2:00pm</strong> - Coconut Bowling <br><br>
+                <strong>2:00-4:00pm</strong> - Dean's Lunch <br><br>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+               Monday, February 21st
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>10:30-1:30pm</strong> - Cheap Lunch (Jimmy John's Originals) <br><br>
+                <strong>5:00-6:00pm</strong> - Poop the Potato <br><br>
+                <strong>6:00-7:00pm</strong> - Trivia <br><br>
+                <strong>7:00-8:00pm</strong> - Dizzy Pirate <br><br>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Tuesday, February 22nd
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>10:30-1:30pm</strong> - Cheap Lunch (Manolo's Empanadas)<br><br>
+                <strong>4:00-5:00pm</strong> - Water Pong <br> <br>
+                <strong>5:00-6:00pm</strong> - Bags <br><br>
+                <strong>6:00-7:00pm</strong> - Karaoke <br><br>
+                <strong>8:00pm</strong> - Amazing Race <br><br>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+               Wednesday, February 23rd
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>10:30-1:30pm</strong> - Cheap Lunch (DP Dough Calzones)<br><br>
+                <strong>4:00-5:00pm</strong> - Engineering Relay <br> <br>
+                <strong>5:00-6:00pm</strong> - Walk the Plank <br><br>
+                <strong>6:30-8:00pm</strong> - Costume Contest <br><br>
+                <strong>9:00pm</strong> - Tour of Establishments <br><br>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingThree">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                Thursday, February 24th
+              </button>
+            </h2>
+            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>10:30-1:30pm</strong> - Cheap Lunch (Maize Tacos)<br><br>
+                <strong>5:00-7:00pm</strong> - Order of the Engineer <br><br>
+                <strong>9:00-11:00pm</strong> - Broomball <br><br>
+              </div>
+            </div>
+          </div>
+          <div class="accordion-item">
+            <h2 class="accordion-header" id="headingTwo">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+               Friday, February 25th
+              </button>
+            </h2>
+            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>10:30-1:00pm</strong> - Cheap Lunch (Rosati's Pizza) <br><br>
+                <strong>10:00-12:00pm</strong> - Dodgeball <br><br>
+                <strong>12:00-1:00pm</strong> - 3 Leg Race <br> <br>
+                <strong>TBD</strong> - Pregame <br><br>
+                <strong>10:00pm</strong> - Semi (close) <br><br>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        </div> 
+        <br>
+
+      <div class="sponsors pt-36 mb-48">
+        <p class="title-1 text-5xl mb-12">Sponsors</p>
+        <br>
+        <div class = "sponsor container">
+          <div class = "sponsorlogo">
+            <img src = "sponsorlogos/nvidialogo.png"> 
+          </div>
+          &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; 
+          <div class="sponsorlogo">
+            <img src ="sponsorlogos/fblogo.png">
+          </div>
+          </div>
+        </div>
+        <br>
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
         <p class="text-4xl">Email Bella Ramos at iramos9@illinois.edu.</p>
       </div>
+
       <footer class="text-center mb-6">
         <!-- <div class="container pt-9">
           <div class="flex justify-center mb-9">
