--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
     <link rel="icon" href="./logo.svg">
     <meta property="og:image" content="./logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+    <style type="text/css">
+      body { background: none !important; } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
+   </style>
     <title>E-week 2022</title>
   </head>
 
-  <body>
+  <body class="bg-gray">
     <div id="grad"></div>
     <div id="waves"></div>
     <div class="main ml-auto mr-auto">
@@ -109,12 +111,12 @@
           </div>
         <div class="accordion" id="accordionExample">
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <h2 class="accordion-header" id="heading1">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
                 Sunday, February 20th
               </button>
             </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div id="collapse1" class="accordion-collapse collapse" aria-labelledby="heading1" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>10-10:30am</strong> - Mile Run <br><br>
                 <strong>10:30-11:30am</strong> - Obstacle Course <br> <br>
@@ -125,12 +127,12 @@
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <h2 class="accordion-header" id="heading2">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
                Monday, February 21st
               </button>
             </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>10:30-1:30pm</strong> - Cheap Lunch (Jimmy John's Originals) <br><br>
                 <strong>5:00-6:00pm</strong> - Poop the Potato <br><br>
@@ -140,12 +142,12 @@
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <h2 class="accordion-header" id="heading3">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
                 Tuesday, February 22nd
               </button>
             </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="heading3" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>10:30-1:30pm</strong> - Cheap Lunch (Manolo's Empanadas)<br><br>
                 <strong>4:00-5:00pm</strong> - Water Pong <br> <br>
@@ -156,12 +158,12 @@
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <h2 class="accordion-header" id="heading4">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
                Wednesday, February 23rd
               </button>
             </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>10:30-1:30pm</strong> - Cheap Lunch (DP Dough Calzones)<br><br>
                 <strong>4:00-5:00pm</strong> - Engineering Relay <br> <br>
@@ -172,12 +174,12 @@
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingThree">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <h2 class="accordion-header" id="heading5">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
                 Thursday, February 24th
               </button>
             </h2>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+            <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>10:30-1:30pm</strong> - Cheap Lunch (Maize Tacos)<br><br>
                 <strong>5:00-7:00pm</strong> - Order of the Engineer <br><br>
@@ -186,12 +188,12 @@
             </div>
           </div>
           <div class="accordion-item">
-            <h2 class="accordion-header" id="headingTwo">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <h2 class="accordion-header" id="heading6">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
                Friday, February 25th
               </button>
             </h2>
-            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+            <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
               <div class="accordion-body">
                 <strong>10:30-1:00pm</strong> - Cheap Lunch (Rosati's Pizza) <br><br>
                 <strong>10:00-12:00pm</strong> - Dodgeball <br><br>
@@ -209,7 +211,7 @@
       <div class="sponsors pt-36 mb-48">
         <p class="title-1 text-5xl mb-12">Sponsors</p>
         <br>
-        <div class = "sponsor container">
+        <div class = "flex flex-col w-1/2 sponsor container">
           <div class = "sponsorlogo">
             <img src = "sponsorlogos/nvidialogo.png"> 
           </div>
