--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             Team Sign Up
           </a>
           <a
-            href="https://docs.google.com/forms/d/e/1FAIpQLScXZP7v9WDfrn0FHtWpkVGH4B9i9mUr0BsySId3fimm3_y3Ig/viewform?usp=sf_link"
+            href="https://docs.google.com/document/d/1Kd27Hv8XLGlhTQSlECy9sURsFRJ3g6kkA0Yqy3T_byg/edit"
             target="_blank"
             class="mr-4 mb-4 button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
