--- a/index.html
+++ b/index.html
@@ -63,6 +63,168 @@
         </div>
       </div>
       <div class="about pt-36 mb-24">
+        <p class="title-1 text-5xl mb-12">Team Rankings</p>
+
+        <p class="title-1 text-3xl mb-12">5-Person Team</p>
+        <div class="w-full mx-auto mb-8">
+          <table class="table-auto">
+            <thead>
+              <tr>
+                <th class="font-xbold w-96">Team Name</th>
+                <th class="font-xbold">Points</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Residents of 419</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>WECE You!</td>
+                <td>5</td>
+              </tr>
+              <tr>
+                <td>exec shipwreck</td>
+                <td>573</td>
+              </tr>
+              <tr>
+                <td>Lucky Charms</td>
+                <td>149</td>
+              </tr>
+              <tr>
+                <td>Fighting Illini Battalion</td>
+                <td>142</td>
+              </tr>
+              <tr>
+                <td>Pirates of the Boneyard</td>
+                <td>282</td>
+              </tr>
+              <tr>
+                <td>E.W.Beasts</td>
+                <td>14</td>
+              </tr>
+              <tr>
+                <td>Alpha</td>
+                <td>143</td>
+              </tr>
+              <tr>
+                <td>ESAA</td>
+                <td>526</td>
+              </tr>
+              <tr>
+                <td>Mission</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>Altgeld Dairy Queen Staff</td>
+                <td>30</td>
+              </tr>
+              <tr>
+                <td>A Pirate's Life for Me</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>Walk Tau Plank</td>
+                <td>661</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <p class="title-1 text-3xl mb-12">10-Person Team</p>
+        <div class="w-full mx-auto mb-8">
+          <table class="table-auto">
+            <thead>
+              <tr>
+                <th class="w-96">Team Name</th>
+                <th>Points</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Long John Civils</td>
+                <td>433</td>
+              </tr>
+              <tr>
+                <td>Pirates of the Western Great Lakes Student Symposium 2022</td>
+                <td>442</td>
+              </tr>
+              <tr>
+                <td>Legends of the Sea</td>
+                <td>17</td>
+              </tr>
+              <tr>
+                <td>Illinois Bois</td>
+                <td>2</td>
+              </tr>
+              <tr>
+                <td>The Sassy Seahorses</td>
+                <td>511</td>
+              </tr>
+              <tr>
+                <td>Solar Sea Men</td>
+                <td>228</td>
+              </tr>
+              <tr>
+                <td>Sea Shawties</td>
+                <td>7</td>
+              </tr>
+              <tr>
+                <td>SWEsters</td>
+                <td>82</td>
+              </tr>
+              <tr>
+                <td>Shiver m-EA Timbers!</td>
+                <td>304</td>
+              </tr>
+              <tr>
+                <td>Llamas</td>
+                <td>36</td>
+              </tr>
+              <tr>
+                <td>Material Gorls</td>
+                <td>19</td>
+              </tr>
+              <tr>
+                <td>Theta Taurgh</td>
+                <td>592</td>
+              </tr>
+              <tr>
+                <td>NullPointerException</td>
+                <td>27</td>
+              </tr>
+              <tr>
+                <td>SHPE-Wreckers</td>
+                <td>358</td>
+              </tr>
+              <tr>
+                <td>Walk Tau Plank</td>
+                <td>328</td>
+              </tr>
+              <tr>
+                <td>ISS in a Trench Coat</td>
+                <td>4</td>
+              </tr>
+              <tr>
+                <td>Bad Biddies</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>TommyNoHilfiger</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>Davy Jones</td>
+                <td>0</td>
+              </tr>
+              <tr>
+                <td>Yo Ho</td>
+                <td>0</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <div class="about pt-12 mb-24">
         <p class="title-1 text-5xl mb-12">About</p>
         <p class="text-2xl mb-12">
           <strong>Welcome to E-Week 2022!</strong>
@@ -262,7 +424,6 @@
                 <strong>10:30-1:30pm</strong> - Cheap Lunch (Maize Tacos)<br /><br />
                 <strong>5:00-7:00pm</strong> - Order of the Engineer
                 <br /><br />
-                <strong>9:00-11:00pm</strong> - Broomball <br /><br />
               </div>
             </div>
           </div>
@@ -288,7 +449,6 @@
               <div class="accordion-body">
                 <strong>10:30-1:00pm</strong> - Cheap Lunch (Rosati's Pizza)
                 <br /><br />
-                <strong>10:00-12:00pm</strong> - Dodgeball <br /><br />
                 <strong>12:00-1:00pm</strong> - 3 Leg Race <br />
                 <br />
                 <strong>10:00pm</strong> - Semi (close) <br /><br />
