--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <div id="ship" class=""></div>
 
       <div class="home mb-96">
+        <nav class="flex mt-12">
+          <a href="index.html" class="text-2xl mr-8">Home</a>
+          <a href="videos.html" class="text-2xl">Video Submissions</a>
+        </nav>
+        
         <div class="header mt-6 mb-24 flex">
           <!-- <a class="mr-6 uppercase tracking-wider hover:text-gray-800">Home</a>
           <a class="mr-6 uppercase tracking-wider hover:text-gray-800">About</a>
