--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
                 <td>Walk Tau Plank</td>
                 <td>661</td>
               </tr>
+              <tr>
+                <td>ISS in a trench coat</td>
+                <td>117</td>
+              </tr>
+              <tr>
+                <td>AD Astros</td>
+                <td>83</td>
+              </tr>
             </tbody>
           </table>
         </div>
