--- a/videos.html
+++ b/videos.html
@@ -37,7 +37,12 @@
       </nav>
 
       <p class="title-1 text-5xl mb-12">Video Submissions</p>
-      <a href="https://youtube.com/shorts/S6jZlo06N3g" target="_blank" class="font-bold text-4xl underline">Click here to watch!</a>
+      <a href="https://youtube.com/shorts/S6jZlo06N3g" target="_blank" class="font-bold text-4xl underline">Pirates of the Western Great Lakes Conference</a>
+      <br>
+      <a href="https://www.youtube.com/watch?v=7Lh2-R-ZcDs&ab_channel=KappaThetaTau" target="_blank" class="font-bold text-4xl underline">Theta Taurgh</a>
+      <br>
+      <a href="https://www.youtube.com/watch?v=EHtcvearicA&ab_channel=ZackGold" target="_blank" class="font-bold text-4xl underline">Exec Shipwreck</a>
+      <br>
       </div>
     </div>
   </body>
