--- a/videos.html
+++ b/videos.html
@@ -42,7 +42,8 @@
       <a href="https://www.youtube.com/watch?v=7Lh2-R-ZcDs&ab_channel=KappaThetaTau" target="_blank" class="font-bold text-4xl underline">Theta Taurgh</a>
       <br>
       <a href="https://www.youtube.com/watch?v=EHtcvearicA&ab_channel=ZackGold" target="_blank" class="font-bold text-4xl underline">Exec Shipwreck</a>
-      <br>
+      <br><br><br><br>
+      <a href="https://www.youtube.com/watch?v=Gh4pSIk4BUw&ab_channel=MarieHubbard" target="_blank" class="font-bold text-4xl underline">Walk Tau Plank</a>
       </div>
     </div>
   </body>
