--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </a>
         </div>
       </div>
-      <!–– 
+      <!-- 
       <div class="about pt-36 mb-24">
         <p class="title-1 text-5xl mb-12">Team Rankings</p>
 
@@ -233,7 +233,7 @@
             </tbody>
           </table>
         </div>
-      </div> ––>
+      </div> -->
       <div class="about pt-12 mb-24">
         <p class="title-1 text-5xl mb-12">About</p>
         <p class="text-2xl mb-12">
