part 1 emergency patch of 2023 website
changed index to meet bare minimum of 2023's website; 2022 website preserved in zip file

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         background: none !important;
       } /* Adding !important forces the browser to overwrite the default style applied by Bootstrap */
     </style>
-    <title>E-week 2022</title>
+    <title>E-week 2023</title>
   </head>
 
   <body class="bg-gray">
@@ -51,15 +51,17 @@
           <a class="mr-6 uppercase tracking-wider hover:text-gray-800">FAQ</a> -->
         </div>
         <div class="title-card">
-          <div id="logo" class="mb-8"></div>
-          <h4 class="title-1 text-3xl md:text-5xl mb-4">Get hyped for</h4>
-          <h1 class="title-2 text-6xl md:text-8xl mb-8">E-week 2022</h1>
+          /*<div id="logo" class="mb-8"></div>*/
+          <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK WISDOM,</h4>
+          <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK GLORY,</h4>
+          <h4 class="title-1 text-3xl md:text-5xl mb-4">SEEK</h4>
+          <h1 class="title-2 text-6xl md:text-8xl mb-8">E-WEEK 2023</h1>
           <p class="mb-12 text-3xl md:text-4xl tracking-wider">
             February 20th - 25th, 2023
           </p>
           <br>
           <a
-            href="https://forms.gle/q3CengjFFVB9jC6m7 "
+            href="https://docs.google.com/forms/d/e/1FAIpQLSd9yMA18cH6AAMoC4Ir5o44zkxSdXlj5UDhNTv9D4V5OP4dcA/viewform"
             target="_blank"
             class="button uppercase tracking-wider px-12 py-4 text-2xl rounded-full border border-black hover:text-white hover:bg-gray-800 hover:border-transparent focus:outline-none focus:ring-2 focus:ring-black focus:ring-offset-2"
           >
@@ -237,7 +239,7 @@
       <div class="about pt-12 mb-24">
         <p class="title-1 text-5xl mb-12">About</p>
         <p class="text-2xl mb-12">
-          <strong>Welcome to E-Week 2022!</strong>
+          <strong>Welcome to E-Week 2023!</strong>
           <br />
           <br />
           E-Week is a week-long celebration highlighting the contributions to
@@ -251,14 +253,18 @@
           await!
           <br />
           <br />
-          Below is an overview of all events, including a description and any
+          The website is still under construction, but we will be able to post
+          relevant information such as point tier, locations, events, more
+          very soon! If you have any general questions, message Sofia Ramos
+          at sofiamiramos14@gmail.com.
+          /*Below is an overview of all events, including a description and any
           relevant information like point tier, host, and location. All events
           have two competitions (5-Person and 10-Person) unless stated
           otherwise. Points & event winners will be updated every night. Rules
           are linked in the event titles. If you have any general questions,
-          email Bella Ramos at iramos9@illinois.edu.
+          email Bella Ramos at iramos9@illinois.edu.*/
         </p>
-        <div class="flex flex-wrap">
+        /*<div class="flex flex-wrap">
           <a
             href="https://docs.google.com/document/d/1mBC18fEqcg2Dxpcq-m7s__9BBX1IiaIenCjaJ1byXGU/edit?usp=sharing"
             target="_blank"
@@ -287,13 +293,14 @@
           >
             Join the Order of the Engineer
           </a>
-        </div>
+        </div>*/
       </div>
       <div class="Sched">
         <div class="about pt-36 mb-20">
-          <p class="title-1 text-5xl mb-12">Events Schedule</p>
+          <p class="title-1 text-5xl mb-12">Events Schedule - Coming Soon!</p>
         </div>
-        <div class="accordion" id="accordionExample">
+        
+        /*<div class="accordion" id="accordionExample">
           <div class="accordion-item">
             <h2 class="accordion-header" id="heading1">
               <button
@@ -463,7 +470,7 @@
                 <br />
                 <strong>10:00pm</strong> - Semi (close) <br /><br />
               </div>
-            </div>
+            </div>*/
           </div>
         </div>
       </div>
@@ -801,7 +808,7 @@
         </div> -->
 
         <div class="text-black">
-          © 2022 Copyright:
+          © 2023 Copyright:
           <a class="text-black" href="https://tailwind-elements.com/"
             >E-week Committee</a
           >
