--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
           </div>
         </div>
-      </div>
+
       <br />
 
       <div class="sponsors pt-36 mb-10">
@@ -273,9 +273,9 @@
 
       <div class="faq mb-48">
         <p class="title-1 text-5xl mb-12">Questions?</p>
-        <p class="text-4xl">Email Bella Ramos at iramos9@illinois.edu.</p>
+        <p class="text-4xl">Email Sofia Ramos at sofiamiramos14@gmail.com.</p>
       </div>
-
+   </div>
       <footer class="text-center mb-6">
         <!-- <div class="container pt-9">
           <div class="flex justify-center mb-9">
